vk-apps-frontend/src/assets/css/index.css
a {
    color: inherit;
    text-decoration: none;
}

* {
    user-select: none !important;
    -moz-user-select: none !important; /* Firefox */
    -ms-user-select: none !important; /* Internet Explorer */
    -khtml-user-select: none !important; /* KHTML browsers (e.g. Konqueror) */
    -webkit-user-select: none !important; /* Chrome, Safari, and Opera */
    -webkit-touch-callout: none !important; /* Disable Android and iOS callouts*/
}

.rdtPicker {
    border: 1px solid var(--field_border);
    border-radius: 10px;
    width: auto;
    max-width: 640px;
    margin: auto;
}

.view-enter {
    opacity: 0.01;
}

.view-enter.view-enter-active {
    opacity: 1;
    transition: opacity 500ms ease-in;
}

.view-leave {
    opacity: 1;
}

.view-leave.view-leave-active {
    opacity: 0.01;
    transition: opacity 300ms ease-in;
}

